feat: 实现 Chat Agent 对话式 AI 助手（工具调用 + 前后端联调） - 后端：Agent 编排器、13 个业务 Tool、Redis 会话记忆、Chat REST API - 前端：聊天界面、Agent 卡片渲染、多语言支持 - 数据库：V4/V5 迁移脚本；文档：AGENT-TOOL-CALLING.md